syntax = "proto3";
package pmsg;

option go_package="./pmsg";

message SwallowCount {
    string OpenId = 1; // 用户ID
    int64 SwallowCount = 2;    //吞噬个数
    int64 TimeStamp = 3; //时间戳
}